[package]
name = "markup_fmt"
description = "A simple cli wrapper for markup_fmt."
version = "0.1.0"
edition = "2024"

[dependencies]
markup_fmt = { version = "0.24.0", features = ["config_serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive"] }


[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
